select all added sync

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -7,4 +7,4 @@ deployment:
  - /bin/cp sign-in.html $DEPLOYPATH
  - /bin/cp sign-up.html $DEPLOYPATH
  - /bin/cp add-info.html $DEPLOYPATH
- - /bin/ cp -R $DEPLOYPATH
+ - /bin/ cp -R * $DEPLOYPATH
