--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,8 +2,4 @@
 deployment:
  tasks:
  - export DEPLOYPATH=/home/pakrashan/public_html
- - /bin/cp index.html $DEPLOYPATH
- - /bin/cp style.css $DEPLOYPATH
- - /bin/cp sign-in.html $DEPLOYPATH
- - /bin/cp sign-up.html $DEPLOYPATH
- - /bin/cp add-info.html $DEPLOYPATH
+ - /bin/cp https://github.com/AliTechGeek52/pak-rashan.git $DEPLOYPATH
