--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,7 +2,9 @@
 deployment:
  tasks:
  - export DEPLOYPATH=/home/pakrashan/public_html
- - /bin/cp index.html $DEPLOYPATH
+ - /bin/cp index.php $DEPLOYPATH
  - /bin/cp style.css $DEPLOYPATH
- - /bin/cp add-info.html $DEPLOYPATH
- - /bin/cp https://github.com/AliTechGeek52/pak-rashan.git $DEPLOYPATH
+ - /bin/cp add-info.php $DEPLOYPATH
+ - /bin/cp add-volunteer.php $DEPLOYPATH
+ - /bin/cp logout.php $DEPLOYPATH
+ - /bin/cp req.php $DEPLOYPATH
