--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -8,3 +8,4 @@ deployment:
  - /bin/cp add-volunteer.php $DEPLOYPATH
  - /bin/cp logout.php $DEPLOYPATH
  - /bin/cp req.php $DEPLOYPATH
+ - /bin/cp https://github.com/AliTechGeek52/pak-rashan.git $DEPLOYPATH
